add home page, recruitment list, backend get them ten cua company va cate

--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <a href="#" class="nav-item">Home</a>
+            <a href="home" class="nav-item">Home</a>
 
             <div class="dropdown">
                 <button class="nav-item dropbtn">Category ▼</button>
