--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="nav-right">
-            <a href="#" class="nav-item">Register</a>
-            <a href="#" class="nav-item">Log In</a>
+            <a href="register" class="nav-item">Register</a>
+            <a href="login" class="nav-item">Log In</a>
         </div>
     </nav>
 </body>
