add company, post list (all)

--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -30,8 +30,8 @@
 
 
 
-            <a href="#" class="nav-item">Company</a>
-            <a href="#" class="nav-item">Job Post</a>
+            <a href="company" class="nav-item">Company</a>
+            <a href="recruitment" class="nav-item">Job Post</a>
         </div>
 
         <div class="nav-right">
