--- a/Web_Client/src/app/feature/homepage/homepage.component.html
+++ b/Web_Client/src/app/feature/homepage/homepage.component.html
@@ -30,9 +30,10 @@
 
         <h2>Top Doanh Nghiệp</h2>
         <div class="companies">
-            <div class="company" *ngFor="let company of companies" [routerLink]="['/recruitment','company', company.id]"
-                class="clickable">
-                {{ company.name }}
+            <div class="company clickable" *ngFor="let company of companies"
+                [routerLink]="['/recruitment', 'company', company.id]">
+                <img [src]="'assets/images/slide1.jpg'" alt="{{ company.name }}" class="company-logo" />
+                <span class="company-name">{{ company.name }}</span>
             </div>
         </div>
 
@@ -40,9 +41,13 @@
         <h2>Top Bài Đăng</h2>
         <div class="posts">
             <div class="post" *ngFor="let post of recruitments ">
+                <img [src]="'assets/images/slide1.jpg'" alt="{{ post.companyName }}" class="company-logo" />
                 <strong>{{post.type}}</strong>
                 <p>{{post.title}}</p>
                 <small>{{post.description}}</small>
+                <div class="salary-box">
+                    <small>{{ post.salary }} triệu</small>
+                </div>
                 <a href="#" class="apply-btn">Apply job</a>
             </div>
 
