--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.css
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     flex: 1;
     min-width: 150px;
-    text-align: center;
+    text-align: left;
 }
 
 .post {
@@ -22,4 +22,24 @@
     margin-top: 10px;
     text-align: center;
     border-radius: 5px;
+}
+
+.company-logo {
+    width: 100px;
+    /* Adjust as needed */
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    /* Make it circular */
+    margin-right: 10px;
+}
+
+.salary-box {
+    background: #ffcc00;
+    color: #333;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 14px;
+    white-space: nowrap;
 }
