--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
@@ -2,10 +2,14 @@
 
 
 <div *ngIf="paginatedRecruitments.length > 0; else noResults">
-    <div class="post" *ngFor="let post of paginatedRecruitments">
-        <strong>{{ post.type }}</strong>
-        <p>{{ post.title }}</p>
-        <small>{{ post.description }}</small>
+    <div class="post" *ngFor="let post of recruitments ">
+        <img [src]="'assets/images/slide1.jpg'" alt="{{ post.companyName }}" class="company-logo" />
+        <strong>{{post.type}}</strong>
+        <p>{{post.title}}</p>
+        <small>{{post.description}}</small>
+        <div class="salary-box">
+            <small>{{ post.salary }} triệu</small>
+        </div>
         <a href="#" class="apply-btn">Apply job</a>
     </div>
 
