--- a/Web_Client/src/app/feature/loginpage/loginpage.component.html
+++ b/Web_Client/src/app/feature/loginpage/loginpage.component.html
@@ -1,15 +1,17 @@
 <div class="container">
     <div class="login-box">
-        <h2>Welcome !</h2>
+        <h2>Welcome!</h2>
         <h1>Sign in to Top-CV Web</h1>
-        <form>
+        <form (ngSubmit)="onFormSubmit()">
             <div class="input-group">
-                <label for="username">Email</label>
-                <input type="text" id="email" placeholder="Enter your email" required>
+                <label for="email">Email</label>
+                <input type="text" id="email" [(ngModel)]="model.email" name="email" placeholder="Enter your email"
+                    required>
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your Password" required>
+                <input type="password" id="password" [(ngModel)]="model.password" name="password"
+                    placeholder="Enter your Password" required>
             </div>
             <div class="options">
                 <a href="#" class="forgot-password">Forgot Password?</a>
