--- a/Web_Client/src/app/feature/confirmlogin/confirmlogin.component.html
+++ b/Web_Client/src/app/feature/confirmlogin/confirmlogin.component.html
@@ -1,1 +1,4 @@
-<p>confirmlogin works!</p>
+<div class="container">
+    <h1>Welcome to the User!</h1>
+    <p>Your token: <strong>{{ userEmail }}</strong></p>
+</div>
