--- a/Web_Client/src/app/feature/confirmlogin/confirmlogin.component.html
+++ b/Web_Client/src/app/feature/confirmlogin/confirmlogin.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <h1>Welcome to the User!</h1>
-    <p>Your token: <strong>{{ userEmail }}</strong></p>
+    <p>Your email: <strong>{{ email || 'Not available' }}</strong></p>
+    <p>Your role: <strong>{{ role || 'Not available' }}</strong></p>
 </div>
