--- a/Web_Client/src/app/feature/company/company-list/company-list.component.css
+++ b/Web_Client/src/app/feature/company/company-list/company-list.component.css
@@ -45,3 +45,33 @@
     text-align: center;
     border-radius: 5px;
 }
+
+.search-container {
+    display: flex;
+    width: 100%;
+    max-width: 600px;
+  }
+  
+  .search-container input {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px 0 0 5px;
+    font-size: 16px;
+    background-color: #f9f9f9;
+  }
+  
+  .search-btn {
+    padding: 10px 20px;
+    background-color: #3f51b5;
+    color: white;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 16px;
+    transition: 0.3s;
+  }
+  
+  .search-btn:hover {
+    background-color: #2c387e;
+  }
