view cv tren web

--- a/Web_Client/src/app/feature/recruiter/apply-cv/apply-cv.component.html
+++ b/Web_Client/src/app/feature/recruiter/apply-cv/apply-cv.component.html
@@ -1,2 +1,7 @@
-<iframe *ngIf="pdfUrl" [src]="pdfUrl" width="100%" height="600px" title="Candidate's CV">
-</iframe>
+<div *ngIf="cvUrl; else noCv">
+    <iframe [src]="cvUrl " width="100%" height="600px" title="Candidate's CV"></iframe>
+</div>
+
+<ng-template #noCv>
+    <p>No CV uploaded.</p>
+</ng-template>
