apply,reject cv

--- a/Web_Client/src/app/feature/recruiter/apply-cv/apply-cv.component.html
+++ b/Web_Client/src/app/feature/recruiter/apply-cv/apply-cv.component.html
@@ -5,3 +5,8 @@
 <ng-template #noCv>
     <p>No CV uploaded.</p>
 </ng-template>
+
+<div class="button-container">
+    <button class="apply-btn" (click)="confirmAction(2)">✅ Chấp thuận</button>
+    <button class="reject-btn" (click)="confirmAction(0)">❌ Từ chối</button>
+</div>
