--- a/Web_Client/src/app/feature/recruiter/recruiter-candidate-list/recruiter-candidate-list.component.html
+++ b/Web_Client/src/app/feature/recruiter/recruiter-candidate-list/recruiter-candidate-list.component.html
@@ -36,7 +36,8 @@
                     === 2 ? 'Chấp thuận' : 'Unknown' }}
                 </td>
                 <td>
-                    <div class="cv-button" [routerLink]="['/recruiter', 'candidate', 'apply', candidate.id]">
+                    <div class="cv-button"
+                        [routerLink]="['/recruiter', 'candidate', 'apply',candidate.applyPostId, candidate.id]">
                         Xem CV
                     </div>
                 </td>
