frontEnd forgot password

--- a/Web_Client/src/app/feature/loginpage/loginpage.component.html
+++ b/Web_Client/src/app/feature/loginpage/loginpage.component.html
@@ -14,7 +14,7 @@
                     placeholder="Enter your Password" required>
             </div>
             <div class="options">
-                <a href="#" class="forgot-password">Forgot Password?</a>
+                <a href="forgot-password" class="forgot-password">Forgot Password?</a>
             </div>
             <button type="submit">Login</button>
             <p class="register-link">Don't have an Account? <a href="register">Sign up</a></p>
