--- a/Web_Client/src/app/feature/signuppage/signuppage.component.html
+++ b/Web_Client/src/app/feature/signuppage/signuppage.component.html
@@ -37,6 +37,8 @@
 
             <button type="submit">Register</button>
         </form>
+        <p class="login-link">Already have an Account? <a href="login">Sign in</a></p>
+
 
     </div>
     <div class="logo">
