change style, add footer

--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -11,7 +11,12 @@
 <body>
   <nav class="navbar">
     <div class="nav-left">
-      <a href="home" class="nav-item">Trang chủ</a>
+      <div class="logo-container">
+        <img
+          src="https://play-lh.googleusercontent.com/Shy9VB3CKUYUzyzcuJwmDiYZElFJsKYwj5v5X2s3fGfIlL6SzkbAz_sMX6ZX9Sk8JQ"
+          alt="WEB-CV Logo" class="logo-img">
+        <a href="home" class="nav-item logo-text">Trang chủ</a>
+      </div>
       <div class="dropdown">
         <button class="nav-item dropbtn">Danh mục ▼</button>
         <div class="dropdown-content">
