--- a/Web_Client/src/app/app.component.html
+++ b/Web_Client/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div class="container">
   <app-navbar></app-navbar>
 </div>
-<router-outlet />
+<div class="container">
+  <router-outlet />
+
+</div>
+
+<div class="container">
+  <app-footer></app-footer>
+</div>
