--- a/Web_Client/src/app/feature/forgotpassword/forgotpassword.component.html
+++ b/Web_Client/src/app/feature/forgotpassword/forgotpassword.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="button-group">
                 <button type="submit">Reset Password</button>
-                <a routerLink="/login" class="back-link">Back to Sign in</a>
+                <a href="login" class="back-link">Back to Sign in</a>
             </div>
         </form>
     </div>
