--- a/Web_Client/src/app/app.component.html
+++ b/Web_Client/src/app/app.component.html
@@ -1,11 +1,9 @@
-<div class="container">
+<div class="container navbar-container">
   <app-navbar></app-navbar>
 </div>
-<div class="container">
+<div class="container main-content">
   <router-outlet />
-
 </div>
-
-<div class="container">
+<div class="container footer-container">
   <app-footer></app-footer>
 </div>
