--- a/Web_Client/src/app/feature/profile/profile.component.css
+++ b/Web_Client/src/app/feature/profile/profile.component.css
@@ -129,3 +129,16 @@ header {
     margin-top: 10px;
     cursor: pointer;
 }
+
+.avatar-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.avatar-container img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+}
