--- a/Web_Client/src/app/feature/profile/profile.component.html
+++ b/Web_Client/src/app/feature/profile/profile.component.html
@@ -15,6 +15,7 @@
         <div class="profile-card">
             <div class="user-info">
                 <img [src]="userProfile.image || 'default-avatar.png'" alt="User Avatar" class="avatar">
+                <input type="file" (change)="onImageChange($event)" class="avatar-input">
                 <div>
                     <h3>{{ userProfile.fullName }}</h3>
                     <p>{{ userProfile.email }}</p>
