--- a/Web_Client/src/app/feature/company/company-list/company-list.component.html
+++ b/Web_Client/src/app/feature/company/company-list/company-list.component.html
@@ -3,14 +3,19 @@
 <div class="search-container">
     <input type="text" [(ngModel)]="search" placeholder="Tìm kiếm tên công ty">
     <button class="search-btn" (click)="companySearch()">Tìm kiếm</button>
-  </div>
+</div>
 
 <div *ngIf="paginatedCompanies.length > 0; else noResults">
     <div class="companies">
-        <div class="company clickable" *ngFor="let company of companies"
-            [routerLink]="['/recruitment', 'company', company.id]">
-            <img [src]="'assets/images/slide1.jpg'" alt="{{ company.name }}" class="company-logo" />
-            <span class="company-name">{{ company.name }}</span>
+        <div class="company" *ngFor="let company of companies">
+            <div class="company-content clickable" [routerLink]="['/recruitment', 'company', company.id]">
+                <img [src]="'assets/images/slide1.jpg'" alt="{{ company.name }}" class="company-logo" />
+                <span class="company-name">{{ company.name }}</span>
+            </div>
+            <button class="follow-btn" (click)="toggleFollow($event, company.id)"
+                [class.followed]="isFollowing(company.id)">
+                {{ isFollowing(company.id) ? "Bỏ theo dõi" : "Theo dõi" }}
+            </button>
         </div>
     </div>
 
