--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
@@ -2,7 +2,6 @@
 
 <div class="wrapper">
   <div class="tab-container">
-
     <button class="tab" (click)="setActiveTab('title')" [ngClass]="{ active: activeTab === 'title' }">
       Tìm công việc
     </button>
@@ -12,30 +11,25 @@
     </button>
 
     <button class="tab" (click)="setActiveTab('location')" [ngClass]="{ active: activeTab === 'location' }">
-
       Tìm theo địa điểm
     </button>
   </div>
 
   <div class="search-container">
     <input type="text" [(ngModel)]="searchQuery" placeholder="Tìm kiếm theo tên công ty, công việc, địa điểm,..." />
-
     <button class="search-btn" (click)="search()">Tìm kiếm</button>
   </div>
 </div>
 
 <div *ngIf="paginatedRecruitments.length > 0; else noResults">
-  <div class="post" *ngFor="let post of recruitments">
-
+  <div class="post" *ngFor="let post of paginatedRecruitments">
     <img [src]="'assets/images/slide1.jpg'" alt="{{ post.companyName }}" class="company-logo" />
-
     <strong>{{ post.type }}</strong>
     <p>{{ post.title }}</p>
     <small>{{ post.description }}</small>
     <div class="salary-box">
       <small>{{ post.salary }} triệu</small>
     </div>
-
     <div class="action-buttons">
       <button class="favorite-btn" (click)="toggleJobFollow($event, post.id)" *ngIf="isLoggedIn()"
         [style.color]="isJobFollowed(post.id) ? 'inherit' : 'red'">
@@ -45,7 +39,6 @@
         Ứng tuyển ngay
       </a>
     </div>
-
     <p class="login-message" *ngIf="!isLoggedIn()">
       Vui lòng <a routerLink="/login">đăng nhập</a> để ứng tuyển
     </p>
@@ -56,14 +49,12 @@
       Previous
     </button>
 
-
     <button *ngFor="let page of [].constructor(totalPages); let i = index" (click)="goToPage(i + 1)"
       [class.active]="currentPage === i + 1">
       {{ i + 1 }}
     </button>
 
     <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">
-
       Next
     </button>
   </div>
@@ -71,5 +62,4 @@
 
 <ng-template #noResults>
   <p>Không có tuyển dụng phù hợp.</p>
-
 </ng-template>
