--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
@@ -39,11 +39,13 @@
 
 <div *ngIf="paginatedRecruitments.length > 0; else noResults">
   <div class="post" *ngFor="let post of paginatedRecruitments">
-    <img
-      [src]="'assets/images/slide1.jpg'"
-      alt="{{ post.companyName }}"
-      class="company-logo"
-    />
+    <div>
+      <img
+        [src]="'assets/images/slide1.jpg'"
+        alt="{{ post.companyName }}"
+        class="company-logo"
+      />
+    </div>
     <strong>{{ post.type }}</strong>
     <div class="action-buttons">
       <button
