--- a/Web_Client/src/app/feature/resetpassword/resetpassword.component.html
+++ b/Web_Client/src/app/feature/resetpassword/resetpassword.component.html
@@ -1,1 +1,27 @@
-<p>resetpassword works!</p>
+<body>
+    <div class="container">
+        <h2>Reset your password</h2>
+        <form (ngSubmit)="onSubmit()" method='POST' action='/reset-password'>
+            <div class="form-group">
+                <label for="new-password">New Password</label>
+                <div class="password-container">
+                    <input [type]="showNewPassword ? 'text' : 'password'" id="new-password" [(ngModel)]="newPassword"
+                        name="newPassword" placeholder="Enter your Password" required>
+                    <i class="fas" [ngClass]="showNewPassword ? 'fa-eye-slash' : 'fa-eye'"
+                        (click)="togglePassword('new')"></i>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="confirm-password">Confirm New Password</label>
+                <div class="password-container">
+                    <input [type]="showConfirmPassword ? 'text' : 'password'" id="confirm-password"
+                        [(ngModel)]="confirmPassword" name="confirmPassword" placeholder="Enter your Password" required>
+                    <i class="fas" [ngClass]="showConfirmPassword ? 'fa-eye-slash' : 'fa-eye'"
+                        (click)="togglePassword('confirm')"></i>
+                </div>
+            </div>
+            <button type="submit">Reset password</button>
+        </form>
+    </div>
+</body>
