--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -64,7 +64,7 @@
               <a routerLink="/favorite-companies"> Công ty theo dõi </a>
               <a routerLink="/applied-jobs"> Công việc đã ứng tuyển </a>
               <a routerLink="/upload-cv">Upload CV </a>
-              <a routerLink="/upload-cv">Công ty của tôi </a>
+              <a routerLink="/user-companies">Công ty của tôi </a>
               <a href="#" (click)="logout()">Log Out</a>
             </div>
           </div>
