Cviec da ung tuyen
sua giao dien cv da ung tuyen

--- a/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
+++ b/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <div *ngIf="favoriteJobs.length === 0" class="alert alert-info">
-        Bạn chưa có công việc nào trong danh sách yêu thích.
+        Bạn chưa có công việc yêu thích nào.
       </div>
       <div *ngFor="let job of favoriteJobs" class="post">
         <img
