them phantrang cho FJ Cty Daluu

--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -65,8 +65,8 @@
               <!-- Options for candidates only -->
               <ng-container *ngIf="isCandidate()">
                 <a routerLink="/favorite-jobs">Công việc yêu thích</a>
+                <a routerLink="/applied-jobs">Công việc ứng tuyển</a>
                 <a routerLink="/favorite-companies">Công ty theo dõi</a>
-                <a routerLink="/applied-jobs">Công việc đã ứng tuyển</a>
                 <a routerLink="/upload-cv">Upload CV</a>
               </ng-container>
 
