--- a/Web_Client/src/app/components/favorite-companies/favorite-companies.component.html
+++ b/Web_Client/src/app/components/favorite-companies/favorite-companies.component.html
@@ -6,7 +6,7 @@
         Bạn chưa theo dõi công ty nào.
       </div>
       <div class="companies">
-        <div class="company" *ngFor="let company of favoriteCompanies">
+        <div class="company" *ngFor="let company of paginatedCompanies">
           <div
             class="company-content clickable"
             [routerLink]="['/recruitment', 'company', company.companyId]"
@@ -27,5 +27,25 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <!-- Pagination -->
+  <div class="pagination">
+    <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
+      Previous
+    </button>
+    <button
+      *ngFor="let page of [].constructor(totalPages); let i = index"
+      (click)="goToPage(i + 1)"
+      [class.active]="currentPage === i + 1"
+    >
+      {{ i + 1 }}
+    </button>
+    <button
+      (click)="goToPage(currentPage + 1)"
+      [disabled]="currentPage === totalPages"
+    >
+      Next
+    </button>
   </div>
 </div>
