--- a/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.html
+++ b/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.html
@@ -26,4 +26,23 @@
       </div>
     </div>
   </div>
+    <!-- Pagination -->
+    <div class="pagination">
+      <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
+        Previous
+      </button>
+      <button
+        *ngFor="let page of [].constructor(totalPages); let i = index"
+        (click)="goToPage(i + 1)"
+        [class.active]="currentPage === i + 1"
+      >
+        {{ i + 1 }}
+      </button>
+      <button
+        (click)="goToPage(currentPage + 1)"
+        [disabled]="currentPage === totalPages"
+      >
+        Next
+      </button>
+    </div>
 </div>
