them tim kiem cho dsBD

--- a/Web_Client/src/app/components/favorite-companies/favorite-companies.component.css
+++ b/Web_Client/src/app/components/favorite-companies/favorite-companies.component.css
@@ -107,3 +107,17 @@
   background-color: #007bff;
   color: #fff;
 }
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
