--- a/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.css
+++ b/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.css
@@ -117,3 +117,36 @@ strong {
   background-color: #007bff;
   color: #fff;
 }
+
+.filters {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.filters input,
+.filters select {
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 200px;
+}
+
+.filters select {
+  cursor: pointer;
+}
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 250px;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+}
