--- a/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.css
+++ b/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.css
@@ -117,3 +117,18 @@ strong {
   background-color: #007bff;
   color: #fff;
 }
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 250px;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+}
